force-app/main/default/objects/HTTPCalloutEnvironment__mdt/HTTPCalloutEnvironment__mdt.object-meta.xml
<CustomObject>
    <description>Stores environment-specific overrides for HTTP Callout Configurations</description>
    <label>HTTP Callout Environment</label>
    <pluralLabel>HTTP Callout Environments</pluralLabel>
</CustomObject>