force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/BodyOverride__c.field-meta.xml
<CustomField>
    <fullName>BodyOverride__c</fullName>
    <description>Environment-specific request body override</description>
    <inlineHelpText>Environment-specific request body override</inlineHelpText>
    <label>Body Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>