force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/CertificateNameOverride__c.field-meta.xml
<CustomField>
    <fullName>CertificateNameOverride__c</fullName>
    <description>Environment-specific certificate name override</description>
    <inlineHelpText>Environment-specific certificate name override</inlineHelpText>
    <label>Certificate Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>