force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/EndpointOverride__c.field-meta.xml
<CustomField>
    <fullName>EndpointOverride__c</fullName>
    <description>Environment-specific endpoint URL override</description>
    <inlineHelpText>Environment-specific endpoint URL override</inlineHelpText>
    <label>Endpoint Override</label>
    <type>Url</type>
</CustomField>