force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/EnvironmentDescriptor__c.field-meta.xml
<CustomField>
    <fullName>EnvironmentDescriptor__c</fullName>
    <description>Additional descriptor for the environment (e.g., &quot;1&quot;, &quot;2&quot;, &quot;A&quot;, &quot;B&quot;, &quot;Primary&quot;, &quot;Secondary&quot;). Used to differentiate between multiple environments of the same type.</description>
    <inlineHelpText>Enter a text value to differentiate between multiple environments of the same type (e.g., Dev1, Dev2, Staging-A, Production-Primary).</inlineHelpText>
    <label>Environment Descriptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>