force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/EnvironmentName__c.field-meta.xml
<CustomField>
    <fullName>EnvironmentName__c</fullName>
    <description>Name of the environment. Must match one of the Environment values from the parent HTTP Callout Configuration.</description>
    <inlineHelpText>Select the environment type. This should match the Environment value from the parent HTTP Callout Configuration.</inlineHelpText>
    <label>Environment Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>