force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/HeaderParametersOverride__c.field-meta.xml
<CustomField>
    <fullName>HeaderParametersOverride__c</fullName>
    <description>Environment-specific header parameters. Format: key1:value1\nkey2:value2</description>
    <inlineHelpText>Use the below format to store header parameters:-

key1:value1
key2:value2
key3:value3</inlineHelpText>
    <label>Header Parameters Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>