force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/HTTP_Callout_Configuration__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Callout_Configuration__c</fullName>
    <label>HTTP Callout Configuration</label>
    <referenceTo>HTTPCalloutConfiguration__mdt</referenceTo>
    <relationshipLabel>HTTP Callout Environments</relationshipLabel>
    <relationshipName>HTTPCalloutEnvironments</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>