force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this environment configuration is currently active</description>
    <inlineHelpText>Indicates if this environment configuration is currently active</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>