force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/NamedCredentialOverride__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialOverride__c</fullName>
    <description>Environment-specific Named Credential override</description>
    <inlineHelpText>Environment-specific Named Credential override</inlineHelpText>
    <label>Named Credential Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>