force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/SalesforceDomain__c.field-meta.xml
<CustomField>
    <fullName>SalesforceDomain__c</fullName>
    <description>Salesforce domain used to match the current org's domain. Used in Apex to automatically select the correct environment configuration based on the current Salesforce domain.</description>
    <inlineHelpText>Enter the Salesforce domain (e.g., "mycompany.my.salesforce.com" or "mycompany--sandbox.sandbox.my.salesforce.com"). This will be used to automatically match the current org's domain with the appropriate environment configuration.</inlineHelpText>
    <label>Salesforce Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>