force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/TimeoutOverride__c.field-meta.xml
<CustomField>
    <fullName>TimeoutOverride__c</fullName>
    <description>Environment-specific timeout in milliseconds</description>
    <inlineHelpText>Environment-specific timeout in milliseconds</inlineHelpText>
    <label>Timeout Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>