force-app/main/default/objects/HTTPCalloutEnvironment__mdt/fields/URLParametersOverride__c.field-meta.xml
<CustomField>
    <fullName>URLParametersOverride__c</fullName>
    <description>Environment-specific URL parameters. Format: key1:value1\nkey2:value2</description>
    <inlineHelpText>Use the below format to store URL parameters:-

key1:value1
key2:value2
key3:value3</inlineHelpText>
    <label>URL Parameters Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>